Replace error texts with codes
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>